# UAV-Flocking

./: README.md
TOOL_ROS/bluefox2/cfg/: ost.yaml
TOOL_ROS/bluefox2/launch/: single_node.launch
TOOL_ROS/machine_defined/config/: ctrl_param_px3.yaml
TOOL_ROS/machine_defined/launch/: ctrl_md.launch
TOOL_ROS/mocap_optitrack/: CMakeLists.txt
TOOL_ROS/uav_utils/: CMakeLists.txt
VINS-Mono/camera_model/: instruction
VINS-Mono/config/euroc/: euroc_config.yaml
VINS-Mono/vins_estimator/launch/: euroc.launch
VINS-Mono/vins_estimator/src/: estimator_node.cpp
VINS-Mono/vins_estimator/src/utility/: visualization.cpp  visualization.h
marker_dector/: CMakeLists.txt
marker_dector/config/: pg_17221108.yaml
realsense-2.2.1/realsense2_camera/launch/: rs_camera.launch
sim_odom_controller/: CMakeLists.txt
sim_odom_controller/include/: trajectory_generator_waypoint.h
sim_odom_controller/src/: harmonic_uav_controller.cpp  sim_odom_controller.cpp  test_traj.cpp  trajectory_generator_waypoint.cpp
tag_detector/: CMakeLists.txt  package.xml
tag_detector/config/: mv_29901978.yaml  mv_29901979.yml  outconfig.yml  pg_17221108.yml
tag_detector/launch/: tagbag.launch  tagonly.launch
tag_detector/src/: tag_detector_node.cpp
uav_controller/: CMakeLists.txt  package.xml
uav_controller/launch/: jiugang.launch  line.launch  proposed.launch  test.launch
uav_controller/src/: jiugang.cpp  line.cpp  proposed.cpp  test_uav.cpp  trajectory_generator_waypoint.cpp
